Still in the process of perfecting the layout issues with position and sizing of video depending of size of window.

--- a/css/main.css
+++ b/css/main.css
@@ -10,20 +10,9 @@ body {
     font-size: 18px;
 }
 
-.wrapper {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-
 .video-wrapper {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-
-video {
-    width: 100%;
+    margin: 0 auto;
+    display: block;
 }
 
 .transcript {
@@ -44,15 +33,6 @@ video {
 /*************************/
 
 @media screen and (min-width: 768px) {
-    .video-wrapper {
-        width: 100%;
-        margin-top: 2em;
-    }
-
-    video {
-        width: 100%;
-    }
-
     .transcript {
         width: 60%;
         margin-top: 1.2em;
